--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <h1>BG scheme Selector</h1>
-    <h3>Select the Bg-Color to change the background</h3>
+    <h3><marquee>Select the bg-color to change the background</marquee></h3>
 
     <div id="container">   
-        <div id="bg1" class="box">Black</div>
-        <div id="bg2" class="box">White</div>
+        <div id="bg1" class="box">White</div>
+        <div id="bg2" class="box">Black</div>
         <div id="bg3" class="box">Red</div>
         <div id="bg4" class="box">Green</div>
         <div id="bg5" class="box">Yellow</div>
